--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,15 @@ services:
     ports:
       - "8080:8080"
       - "7077:7077"
+    volumes:
+      - ./data:/opt/project_data
+
 
   spark-worker:
     image: apache/spark:3.5.3
     command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master:7077"]
     depends_on:
       - spark-master
+    volumes:
+      - ./data:/opt/project_data
+
